--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["Vic Putz <vbputz@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.9"
 pyrsistent = "^0.18.1"
 toolz = "^0.11.2"
 networkx = "^2.7.1"
@@ -22,6 +22,7 @@ pyls-memestra = "^0.0.16"
 pre-commit = "^2.17.0"
 pytest-xdist = "^2.5.0"
 mypy = "^0.941"
+tox = "^3.24.5"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
