--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ pyrsistent = "^0.18.0"
 toolz = "^0.11.2"
 networkx = "^2.6"
 icontract = "^2.6.0"
+toml = {version = "^0.10.2", optional = true}
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2"
