--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,8 +29,8 @@ repos:
         # after "files" and "types" failed.  The type is "bazel" since bazel and pants
         # both use starlark (or similar, ie subset of python) for BUILD files
         types_or: [bazel]
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.901
-    hooks:
-      - id: mypy
-        exclude: ^(tests\/|docs\/)
+  # - repo: https://github.com/pre-commit/mirrors-mypy
+  #   rev: v0.901
+  #   hooks:
+  #     - id: mypy
+  #       exclude: ^(tests\/|docs\/)
