--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,9 @@ sphinx-rtd-theme = "^1.0.0"
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
+[tool.isort]
+profile="black"
+
 [[tool.mypy.overrides]]
 module = [
   "networkx",
